--- a/package.json
+++ b/package.json
@@ -14,5 +14,15 @@
   "author": {
     "name": "fafnirical",
     "url": "https://github.com/fafnirical"
+  },
+  "scripts": {
+    "format": "prettier --cache --write .",
+    "lint": "prettier --cache --check .",
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1"
   }
 }
