--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fafnirical/eslint-config"
+    "url": "https://github.com/fafnirical/eslint-config.git"
   },
   "license": "MIT",
   "author": {
