--- a/package.json
+++ b/package.json
@@ -24,15 +24,23 @@
     "lint:eslint": "eslint --cache --cache-location node_modules/.cache/eslint .",
     "lint:package-json": "sort-package-json --check",
     "lint:prettier": "prettier --cache --check .",
+    "lint:tsc": "tsc --project tsconfig.eslint.json",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@tsconfig/node18-strictest": "^1.0.0",
+    "@types/eslint": "^8.4.5",
+    "@types/node": "^18.0.6",
+    "@types/prettier": "^2.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "concurrently": "^7.2.2",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "sort-package-json": "^1.57.0"
+    "sort-package-json": "^1.57.0",
+    "typescript": "^4.7.4"
   }
 }
