chore: Create parallel lint, format scripts

--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "type": "module",
   "scripts": {
+    "format": "concurrently \"npm:format:*(!prettier)\" && npm run format:prettier",
     "format:package-json": "sort-package-json",
     "format:prettier": "prettier --cache --cache-location node_modules/.cache/prettier --write .",
+    "lint": "concurrently \"npm:lint:*\"",
     "lint:package-json": "sort-package-json --check",
     "lint:prettier": "prettier --cache --cache-location node_modules/.cache/prettier --check ."
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "prettier": "^3.2.5",
     "sort-package-json": "^2.8.0"
   },
