--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
+    "@types/eslint__js": "^8.42.3",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
-    "sort-package-json": "^2.8.0"
+    "sort-package-json": "^2.8.0",
+    "typescript": "^5.4.3",
+    "typescript-eslint": "^7.3.1"
   },
   "engines": {
     "node": ">=20.9.0"
