--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
   "dependencies": {
     "@eslint/js": "^8.57.0",
     "@types/eslint": "^8.56.10",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.12.12",
+    "eslint-config-prettier": "^9.1.0",
     "typescript-eslint": "^7.10.0"
   },
   "devDependencies": {
