--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.12.12",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-perfectionist": "^2.10.0",
     "typescript-eslint": "^7.10.0"
   },
   "devDependencies": {
