--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@types/node": "^22.6.1",
     "eslint-config-flat-gitignore": "^0.3.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-oxc": "^0.3.0",
+    "eslint-plugin-import-x": "^4.3.0",
     "eslint-plugin-perfectionist": "^3.7.0",
     "package-up": "^5.0.0",
     "type-fest": "^4.26.1",
