--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
+    "@eslint-react/eslint-plugin": "^1.15.2",
     "@eslint/js": "^9.14.0",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/node": "^22.8.7",
