--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
-    "eslint": ">=8.21.0"
+    "eslint": "^9.5.0"
   },
   "engines": {
     "node": ">=22.11.0"
